Tool Repainting now accounts for 'corrected' tool paths.

This should reenable smaller than min-threshold rendering
back to expected behavior. It was currently rendering
incorrectly in both render modes.

BUG:427751
(cherry picked from commit ec43d9e2f8aa82f683b06cce7824dd91f775ea46)